Se agregan los enpoints para hacer las pruebas

--- a/BackEnd/Rapid/Rapid.Data/Rapid.Data.csproj
+++ b/BackEnd/Rapid/Rapid.Data/Rapid.Data.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Rapid.Entities\Rapid.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
