--- a/BackEnd/Rapid/Rapid.WebAPI/Rapid.WebAPI.csproj
+++ b/BackEnd/Rapid/Rapid.WebAPI/Rapid.WebAPI.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Rapid.Data\Rapid.Data.csproj" />
+    <ProjectReference Include="..\Rapid.Entities\Rapid.Entities.csproj" />
   </ItemGroup>
 
 </Project>
