--- a/BackEnd/Rapid/Rapid.WebAPI/appsettings.json
+++ b/BackEnd/Rapid/Rapid.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=BLACK\\MSSQL2019;Database=Rapid;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
