Se agrega el proyecto de Servicios

--- a/BackEnd/Rapid/Rapid.Domain/Rapid.Domain.csproj
+++ b/BackEnd/Rapid/Rapid.Domain/Rapid.Domain.csproj
@@ -1,17 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Rapid.Domain\Rapid.Domain.csproj" />
+    <ProjectReference Include="..\Rapid.Data\Rapid.Data.csproj" />
     <ProjectReference Include="..\Rapid.Entities\Rapid.Entities.csproj" />
   </ItemGroup>
 
