Se corrige el archivo de configuración.

--- a/BackEnd/Rapid/Rapid.WebAPI/appsettings.json
+++ b/BackEnd/Rapid/Rapid.WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=BLACK\\MSSQL2019;Database=Rapid;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=BLACK\\MSSQL2019;Database=Rapid;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   }
 }
